--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>datafreak79.ch</title>
 
-  <!-- Favicon / Icon-Datei (Ersetze favicon.png durch deine eigene Datei) -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <!-- Favicon / Icon-Datei -->
+  <!-- Pfad anpassen, wenn du die Datei umbenennst oder in einem Unterordner hast -->
+  <link rel="icon" type="image/png" href="Icon%20Website.png" />
 
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
